z-index fix, preview title font size's fix

--- a/frontend/styles/header.sass
+++ b/frontend/styles/header.sass
@@ -1,5 +1,5 @@
 .header
-  z-index: 2
+  z-index: 3
   margin-left: (-$header-width)
   transition: margin 0.3s ease
   min-height: 440px
@@ -18,7 +18,7 @@
 
     &-wrap
       position: absolute
-      right: -70px
+      right: -60px
       top: 0px
       border-radius: 30px
       padding: 10px
@@ -26,7 +26,6 @@
       @media screen and (min-width: $small)
         padding: 0
         top: 10px
-        right: -60px
 
     @media screen and (min-width: $small)
       right: -65px
