--- a/frontend/styles/preview.sass
+++ b/frontend/styles/preview.sass
@@ -198,20 +198,26 @@
         display: flex
         justify-content: center
         align-items: center
-        flex-flow: column wrap
+        flex-flow: column nowrap
         text-align: center
         width: 100%
         padding: 30px
 
 
       &_title
-        font-size: 36px
-        font-weight: 700
+        font-size: 32px
         color: $white
 
+        @media screen and (min-width: $small)
+          font-size: 36px
+          font-weight: 700
+
       &_description
-        font-size: 20px
+        font-size: 14px
         color: $white
+
+        @media screen and (min-width: $small)
+          font-size: 20px
 
       &_tags
         justify-content: center
